# spirit-shell

./: Cargo.toml  Trunk.toml  focus-manager.js  index.html  index.js
docs/: index.html  spirit-shell-3d9cfecc07e244fa.js  spirit-shell-7ba4941c18005e35.js  spirit-shell-922ce293f2a32f9.js  spirit-shell-aee37cb88b77f8c6.js
src/: add_water.rs  main.rs  ship.rs  water_bundle.rs
